another layout for event creation
post it!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
         <activity
             android:name=".EventDetailActivity"
             android:label="@string/title_activity_event_detail"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".EventCreationActivity"
+            android:label="@string/title_activity_event_creation"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
